--- a/app/src/main/res/layout/activity_show_ledger.xml
+++ b/app/src/main/res/layout/activity_show_ledger.xml
@@ -71,14 +71,17 @@
                  />
 
             <ScrollView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="50dp">
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="50dp"
+                android:layout_marginEnd="10dp">
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="350dp"
+                    android:id="@+id/showvoucherledgerrecycler"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="40dp"
                     tools:listitem="@layout/ledger_list_recycler" />
 
