--- a/app/src/main/res/layout/activity_create_voucher.xml
+++ b/app/src/main/res/layout/activity_create_voucher.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,11 +17,9 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
-            android:layout_marginTop="10dp"
-            android:hint="Choose Client"
-            android:text=""
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginTop="100dp"
+            android:completionHint="@string/app_name"
+            />
 
         <AutoCompleteTextView
             android:id="@+id/list_voucher_mode"
@@ -30,20 +28,28 @@
             android:layout_marginStart="60dp"
             android:layout_marginTop="10dp"
             android:layout_below="@id/create_client_list_autocomplete"
-            android:hint="Choose Voucher Type"
-            android:text=""
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:completionHint="@string/app_name"
+            />
+
 
         <EditText
-            android:id="@+id/client_particulars"
+            android:id="@+id/client_voucher_amount"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_marginStart="60dp"
-            android:hint="Enter Client Name"
+            android:hint="Amount"
             android:layout_below="@id/list_voucher_mode"/>
+
+        <Button
+            android:id="@+id/client_voucher_save"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/client_voucher_amount"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="10dp"
+            android:text="Save Voucher"/>
 
     </RelativeLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
