--- a/app/src/main/res/layout/client_list_item_for_voucher.xml
+++ b/app/src/main/res/layout/client_list_item_for_voucher.xml
@@ -2,10 +2,9 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
     android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
-    android:onClick="createLedgerOption">
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="8dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -21,13 +20,14 @@
             android:id="@+id/client_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/client_name"/>
+            android:layout_below="@id/client_name" />
 
         <TextView
             android:id="@+id/client_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/client_email"/>
+            android:layout_below="@id/client_email" />
 
     </RelativeLayout>
+
 </androidx.cardview.widget.CardView>
