--- a/app/src/main/res/menu/profile_page_menu.xml
+++ b/app/src/main/res/menu/profile_page_menu.xml
@@ -17,6 +17,12 @@
             android:icon="@drawable/add_ledger"
             />
 
+        <item android:id="@+id/showledger"
+            android:title="@string/show_ledger"
+            app:showAsAction="ifRoom"
+            android:icon="@drawable/add_ledger"
+            />
+
     </group>
 
 
