--- a/app/src/main/res/layout/activity_show_ledger.xml
+++ b/app/src/main/res/layout/activity_show_ledger.xml
@@ -19,14 +19,24 @@
             android:layout_marginStart="65dp"
             android:layout_marginTop="100dp"
             android:backgroundTint="#05CCBB">
-
+            <TextView
+                android:id="@+id/account_holder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Harihar Samanta"
+                android:fontFamily="@font/nunito_bold"
+                android:textColor="@color/white"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="40dp"
+                android:textSize="25sp"/>
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Opening Balance"
-                android:layout_marginTop="60dp"
-                android:layout_marginStart="52dp"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/account_holder"
+                android:layout_marginStart="40dp"
                 android:textSize="20sp"
                 android:textColor="@color/white"
                 android:fontFamily="@font/nunito_bold"/>
@@ -36,23 +46,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="40dp"
-                android:layout_marginTop="90dp"
+                android:layout_marginTop="5dp"
+                android:layout_below="@id/textView2"
                 android:fontFamily="@font/nunito_bold"
                 android:text="@string/currency_sign_indian_rupees"
                 android:textColor="@color/white"
-                android:textSize="30sp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/ledger_opening_balance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="90dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_below="@id/textView2"
                 android:layout_toEndOf="@id/currency_sign"
                 android:fontFamily="@font/nunito_bold"
                 android:text="2000"
                 android:textColor="@android:color/background_light"
-                android:textSize="30sp" />
+                android:textSize="20sp" />
 
         </RelativeLayout>
 
