--- a/app/src/main/res/layout/activity_show_ledger.xml
+++ b/app/src/main/res/layout/activity_show_ledger.xml
@@ -83,11 +83,12 @@
                  />
 
             <ScrollView
+                android:id="@+id/voucherviewscroll"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="411dp"
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="50dp"
-                android:layout_marginEnd="10dp">
+                android:layout_marginEnd="0dp">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/showvoucherledgerrecycler"
@@ -95,12 +96,92 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="40dp"
+                    android:layout_marginBottom="30dp"
                     tools:listitem="@layout/ledger_list_recycler" />
 
-            </ScrollView>
 
+            </ScrollView>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_alignParentBottom="true"
+                android:background="@drawable/voucher_list_border"
+                android:backgroundTint="@color/white"
+                >
+                <TextView
+                    android:id="@+id/debit_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Debit"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="25dp"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/nunito_bold"
+                    android:textColor="@color/black"/>
+
+                <TextView
+                    android:id="@+id/debit_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="3000"
+                    android:layout_toEndOf="@id/debit_label"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/nunito"/>
+
+
+                <TextView
+                    android:id="@+id/credit_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_toEndOf="@id/debit_amount"
+                    android:fontFamily="@font/nunito_bold"
+                    android:text="Credit"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/credit_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@id/credit_label"
+                    android:text="4000"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="10dp"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/nunito"/>
+
+                <TextView
+                    android:id="@+id/closing_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Closing Balance"
+                    android:layout_marginTop="15dp"
+                   android:layout_below="@id/debit_label"
+                    android:layout_marginStart="25dp"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/nunito_bold"
+                    android:textColor="@color/black"/>
+
+                <TextView
+                    android:id="@+id/closing_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@id/closing_label"
+                    android:layout_below="@id/debit_label"
+                    android:text="4000"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="10dp"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/nunito"/>
+
+            </RelativeLayout>
+        </RelativeLayout>
 
         </RelativeLayout>
-    </RelativeLayout>
+
 
 </RelativeLayout>
