--- a/app/src/main/res/layout/ledger_list_recycler.xml
+++ b/app/src/main/res/layout/ledger_list_recycler.xml
@@ -15,18 +15,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/ledger_date_and_time"
-            android:layout_marginStart="160dp"
+            android:layout_marginStart="225dp"
             android:layout_marginTop="8dp"
-            android:text="@string/currency_sign_indian_rupees" />
+            android:text="@string/currency_sign_indian_rupees"
+            android:textSize="18sp"/>
 
         <TextView
             android:id="@+id/ledger_client_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
             android:layout_marginTop="8dp"
             android:layout_toEndOf="@id/currency_sign"
+            android:layout_marginStart="10dp"
             android:text="3000"
+            android:textSize="18sp"
             android:textColor="@color/design_default_color_secondary"
             android:fontFamily="@font/nunito_bold"/>
 
@@ -36,9 +38,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="5dp"
             android:text="2017-06-20 8:00 PM"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:textSize="18sp"/>
 
         <TextView
             android:id="@+id/voucher_mode"
@@ -46,10 +49,11 @@
             android:layout_height="wrap_content"
             android:text="Payment"
             android:layout_toEndOf="@id/ledger_date_and_time"
-            android:layout_marginStart="55dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="70dp"
+            android:layout_marginTop="5dp"
             android:fontFamily="@font/nunito_bold"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="20sp"/>
 
     </RelativeLayout>
 
