--- a/app/src/main/res/layout/activity_show_ledger.xml
+++ b/app/src/main/res/layout/activity_show_ledger.xml
@@ -11,6 +11,16 @@
         android:layout_height="wrap_content"
         android:background="#EFEFEF">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/voucherlistpagetoolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            />
+
         <RelativeLayout
             android:id="@+id/heading_ledger_list"
             android:layout_width="280dp"
@@ -66,6 +76,17 @@
                 android:textColor="@android:color/background_light"
                 android:textSize="20sp" />
 
+            <TextView
+                android:id="@+id/voucher_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/ledger_opening_balance"
+                android:layout_marginStart="40dp"
+                android:text="Creditor"
+                android:layout_marginTop="7dp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/nunito"/>
+
         </RelativeLayout>
 
         <RelativeLayout
@@ -93,7 +114,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/showvoucherledgerrecycler"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="40dp"
                     android:layout_marginBottom="30dp"
