--- a/app/src/main/res/layout/ledger_list_recycler.xml
+++ b/app/src/main/res/layout/ledger_list_recycler.xml
@@ -7,8 +7,10 @@
     >
 
     <RelativeLayout
+        android:id="@+id/voucher_list_relative_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <TextView
             android:id="@+id/currency_sign"
