--- a/app/src/main/res/layout/activity_list_of_all_clients.xml
+++ b/app/src/main/res/layout/activity_list_of_all_clients.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,5 +7,14 @@
     tools:context=".profile.addledger.ListOfAllClients"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+   <androidx.appcompat.widget.Toolbar
+       android:id="@+id/allvoucherlistpagetoolbar"
+       android:layout_width="match_parent"
+       android:layout_height="?attr/actionBarSize"
+       android:background="?attr/colorPrimary"
+       android:elevation="4dp"
+       android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+       app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+       />
    <include layout="@layout/content_list_of_all_clients"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
