--- a/app/src/main/res/layout/activity_approve_voucher.xml
+++ b/app/src/main/res/layout/activity_approve_voucher.xml
@@ -4,19 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="60dp"
-   >
-    <ScrollView
+    tools:context=".profile.addledger.addvoucher.ApproveVoucherActivity">
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/client_list_view"
-            android:layout_width="match_parent"
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:listitem="@layout/client_list_item"/>
+            android:layout_marginTop="340dp"
+            android:layout_marginStart="180dp"/>
 
-    </ScrollView>
-
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
