--- a/app/src/main/res/layout/activity_credit_list.xml
+++ b/app/src/main/res/layout/activity_credit_list.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/Theme.AppCompat"
-    tools:context=".profile.debit.DebitListActivity">
+    tools:context=".profile.credit.CreditListActivity">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/debitlistshow"
+        android:id="@+id/creditlistshow"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
@@ -23,12 +23,11 @@
         android:layout_marginTop="58dp">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/client_debit_list_recycler_view"
+            android:id="@+id/client_credit_list_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:listitem="@layout/client_debit_list_recycler"/>
 
     </ScrollView>
-
 
 </RelativeLayout>
