--- a/app/src/main/res/menu/bill_save_menu.xml
+++ b/app/src/main/res/menu/bill_save_menu.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/bill_save_item"
+        android:id="@+id/bill_upload_item"
         android:title="Upload Bill" />
+
+    <item
+        android:id="@+id/bill_save_item"
+        android:title="Write QR" />
 </menu>
