--- a/app/src/main/res/layout/content_delete_voucher.xml
+++ b/app/src/main/res/layout/content_delete_voucher.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="60dp"
-   >
+    android:layout_marginTop="60dp">
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+        >
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/client_list_view"
+            android:id="@+id/recycler_delete_voucher"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:listitem="@layout/client_list_item"/>
-
+            android:layout_height="match_parent"
+            tools:listitem="@layout/delete_voucher_list_recycler"/>
     </ScrollView>
-
 
 </RelativeLayout>
