--- a/app/src/main/res/layout/activity_list_of_ledger_for_deleting.xml
+++ b/app/src/main/res/layout/activity_list_of_ledger_for_deleting.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/ledgerlistfordeletingvoucheractivity"
-    tools:context="profile.deletevoucher.ListOfLedgerForDeletingActivity">
+    tools:context="profile.deletevoucher.activities.ListOfLedgerForDeletingActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/id_pdf_upload_toolbar"
