--- a/app/src/main/res/layout/fragment_client_list.xml
+++ b/app/src/main/res/layout/fragment_client_list.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     tools:context="profile.profilefragments.ledger.ClientListFragment">
 
     <ScrollView
@@ -9,11 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/client_list_fragment_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:listitem="@layout/client_list_item"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/client_list_fragment_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/client_list_item"/>
 
     </ScrollView>
 
@@ -27,4 +28,12 @@
         android:textSize="22sp"
         android:textColor="@color/teal_200"
         android:fontFamily="@font/nunito"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/profile_menu_nav_view"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/profile_page_menu"/>
+
 </RelativeLayout>
