--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,79 +1,112 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="profile.profilefragments.ProfileFragment"
-        android:fitsSystemWindows="true"
-        android:background="@color/white"
-        tools:openDrawer="start"
-        android:id="@+id/drawerlayout">
-        <!--  -->
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/profilepagetoolbar"
-            android:layout_width="0dp"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#00008577"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme"
+            app:layout_constraintBottom_toTopOf="@id/profile_menu_nav_view"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            >
 
-            />
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="64dp"
+                    android:fontFamily="sans-serif-black"
+                    android:text="@string/home_page_heading_content"
+                    android:textColor="@color/main_page_heading_text"
+                    android:textSize="36sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="@string/home_page_heading_content" />
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/debit_credi_main_image"
+                    android:layout_width="369dp"
+                    android:layout_height="265dp"
+                    android:layout_marginStart="46dp"
+                    android:layout_marginTop="40dp"
+                    android:src="@drawable/debit_credit_image"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-        <TextView
-            android:id="@+id/debit_credit_main_heading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:layout_marginStart="20dp"
-            android:text="LedgerApp! INDIA's 1 Ledger based App"
-            android:fontFamily="sans-serif-black"
-            android:textColor="@color/main_page_heading_text"
-            android:textSize="35sp"/>
+                <Button
+                    android:id="@+id/debit_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="35dp"
+                    android:layout_marginEnd="267dp"
+                    android:text="Go For Debit"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/debit_credi_main_image" />
 
-        <ImageView
-            android:id="@+id/debit_credi_main_image"
-            android:layout_width="350dp"
-            android:layout_height="400dp"
-            android:layout_marginStart="70dp"
-            android:src="@drawable/debit_credit_image"
-            android:layout_marginTop="180dp"/>
+                <Button
+                    android:id="@+id/credit_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="100dp"
+                    android:layout_marginEnd="50dp"
+                    android:text="Go For Credit"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/debit_view"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/debit_view" />
 
-        <Button
-            android:id="@+id/debit_view"
-            android:layout_width="160dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/debit_credi_main_image"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="20dp"
-            android:text="Go For Debit" />
+                <ImageView
+                    android:id="@+id/user_image_registered"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:scaleType="fitXY"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/debit_credit_view_border"
+                    android:src="@drawable/debit_credit_view_border"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/credit_view"
-            android:layout_width="160dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/debit_credi_main_image"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_toEndOf="@id/debit_view"
-            android:text="Go For Credit" />
+                <TextView
+                    android:id="@+id/registered_user_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="40dp"
+                    android:layout_marginTop="18dp"
+                    android:text="TextView"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toEndOf="@+id/user_image_registered"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-        </RelativeLayout>
+                <Button
+                    android:id="@+id/copy_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="36dp"
+                    android:layout_marginTop="6dp"
+                    android:text="Copy ID"
+                    android:backgroundTint="@color/teal_300"
+                    app:layout_constraintStart_toEndOf="@+id/registered_user_name"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.navigation.NavigationView
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/profile_menu_nav_view"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:headerLayout="@layout/profile_menu_header"
-            app:menu="@menu/profile_page_menu"
-            android:layout_gravity="start" />
+            android:layout_width="match_parent"
+            android:layout_height="75dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:menu="@menu/profile_page_menu"/>
 
-    </androidx.drawerlayout.widget.DrawerLayout>
-
+</androidx.constraintlayout.widget.ConstraintLayout>
