--- a/app/src/main/res/layout-xxhdpi/fragment_add_ledger.xml
+++ b/app/src/main/res/layout-xxhdpi/fragment_add_ledger.xml
@@ -20,8 +20,10 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.631"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.111" />
 
     <EditText
         android:id="@+id/account_address"
@@ -70,10 +72,11 @@
             android:text="@string/credit_background" />
 
         <RadioButton
-            android:id="@+id/dabit_button"
+            android:id="@+id/debit_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito"
+            android:checked="true"
             android:text="@string/debit_background" />
     </RadioGroup>
 
@@ -122,9 +125,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/account_state" />
 
@@ -133,7 +137,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="30dp"
         android:text="Create Ledger"
         app:layout_constraintEnd_toEndOf="parent"
