--- a/app/src/main/res/layout/activity_create_ledger.xml
+++ b/app/src/main/res/layout/activity_create_ledger.xml
@@ -8,5 +8,26 @@
     tools:context="profile.addledger.CreateLedgerActivity"
    >
 
+    <fragment
+        android:id="@+id/client_list_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/list_of_clients_nav" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/profile_menu_nav_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/client_list_fragment"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:menu="@menu/profile_page_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
