--- a/app/src/main/res/layout/activity_list_of_all_clients.xml
+++ b/app/src/main/res/layout/activity_list_of_all_clients.xml
@@ -1,21 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ledger_holder_list_frag"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/ledger_holder_list_frag"
-    tools:context="profile.addledger.ListOfAllClients"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="profile.addledger.ListOfAllClients">
 
-         <androidx.appcompat.widget.Toolbar
-             android:id="@+id/allvoucherlistpagetoolbar"
-             android:layout_width="match_parent"
-             android:layout_height="?attr/actionBarSize"
-             android:background="?attr/colorPrimary"
-             android:elevation="4dp"
-             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-             />
+    <fragment
+        android:id="@+id/client_main_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/list_of_clients_nav" />
 
-</RelativeLayout>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/profile_menu_nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/client_main_fragment"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/profile_page_menu" />
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/allvoucherlistpagetoolbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/client_main_fragment"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
