--- a/app/src/main/res/layout/fragment_client_list_for_voucher.xml
+++ b/app/src/main/res/layout/fragment_client_list_for_voucher.xml
@@ -1,21 +1,22 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="profile.profilefragments.voucher.ClientListForVoucherFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <ScrollView
 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/client_list_for_voucher_fragment_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="728dp"
         android:layout_marginTop="50dp"
-        tools:listitem="@layout/client_list_item_for_voucher"/>
-    </ScrollView>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/client_list_item_for_voucher" />
 
-</RelativeLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
