--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,18 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="main_page_heading_text">#1E1D1D</color>
+    <color name="black_200">#DCDBDB</color>
+    <color name="black_180">#F1F1F1</color>
     <color name="colorPrimary">#0764A8</color>
     <color name="colorPrimaryDark">#042D4D</color>
+    <color name="colorPrimaryDark_1">#303F9F</color>
+    <color name="colorPrimaryDark_1_100">#EBEDFF</color>
+    <color name="colorPrimaryDark_1_200">#C5CAFB</color>
+    <color name="colorPrimaryDark_1_300">#727EEA</color>
+    <color name="colorPrimaryDark_1_400">#4C57B6</color>
+    <color name="colorPrimaryDark_1_500">#3843A3</color>
+    <color name="colorPrimaryDark_1_600">#29348F</color>
+    <color name="colorPrimaryDark_1_700">#1D2880</color>
     <color name="colorPrimaryLight">#8DCAF6</color>
     <color name="colorAccent">#D81B60</color>
     <color name="searchEditColor">#FFFCF7F9</color>
