--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -6,5 +6,6 @@
         <item>@font/nunito_bold</item>
         <item>@font/nunito_extralight</item>
         <item>@font/oxygen_light</item>
+        <item>@font/poppins_semibold</item>
     </array>
 </resources>
